--- a/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
@@ -94,18 +94,28 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <TextBlock Grid.Row="1" Margin="10" Text="{Binding Path=LocalizedResources.lblDataConsumText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <TextBlock Grid.Row="2" Margin="10" Text="{Binding Path=LocalizedResources.lblIndexText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <toolkit:ListPicker  Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Path=ListaUtilitati}" DisplayMemberPath="DenumireUtilitate" 
+            
+            <StackPanel Grid.Row="0" Orientation="Vertical">
+                <TextBlock  Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <toolkit:ListPicker  ItemsSource="{Binding Path=ListaUtilitati}" DisplayMemberPath="DenumireUtilitate" 
             SelectionChanged="ListPicker_OnSelectionChanged" Name="lstUtils" SelectedItem="{Binding Path=UtilitateSelectata, Mode=TwoWay}"
             IsEnabled="True"></toolkit:ListPicker>
-            <toolkit:DatePicker Grid.Row="1" Grid.Column="1" Value="{Binding Path=ObiectInBinding.DataConsum, Mode=TwoWay }" Name="dtpIndex"  ></toolkit:DatePicker>
-            <TextBox InputScope="Number" Name="txtIndexUtil"  Grid.Row="2" Grid.Column="1" Text="{Binding Path=ObiectInBinding.IndexUtilitate, Mode=TwoWay}"></TextBox>
-            <Button  Width="100" Height="100" Grid.Row="3" Click="CaptureClick" Style="{StaticResource IconButton}">
+            </StackPanel>
+            
+            <StackPanel Grid.Row="1" Orientation="Vertical">
+                <TextBlock  Margin="10" Text="{Binding Path=LocalizedResources.lblDataConsumText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <toolkit:DatePicker  Value="{Binding Path=ObiectInBinding.DataConsum, Mode=TwoWay }" Name="dtpIndex"  ></toolkit:DatePicker>
+            </StackPanel>           
+            
+            <StackPanel Grid.Row="2" Orientation="Vertical">
+                <TextBlock Margin="10" Text="{Binding Path=LocalizedResources.lblIndexText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <TextBox InputScope="Number" Name="txtIndexUtil"  Text="{Binding Path=ObiectInBinding.IndexUtilitate, Mode=TwoWay}"></TextBox>
+            </StackPanel>
+            
+            <StackPanel Grid.Row="3" Orientation="Horizontal">                 
+                <Button  Width="100" Height="100"  Click="CaptureClick" Style="{StaticResource IconButton}">
                     <ImageBrush
                     Stretch="None"
                     ImageSource="/Assets/feature.camera.png"
@@ -113,7 +123,8 @@
                     </ImageBrush>
             </Button>
 
-            <StackPanel Grid.Row="3" Grid.Column="1" Height="150" Width="150" Margin="20" Background="Transparent">
+            <Grid Margin="20" Background="Transparent">
+  
                 <Rectangle Fill="{StaticResource PhoneForegroundBrush}" Width="150" Height="150" Stretch="UniformToFill" Name="rtEmpty" Visibility="Visible" >
                     <Rectangle.OpacityMask>
                         <ImageBrush ImageSource="/Assets/no_photo.png"></ImageBrush>
@@ -121,8 +132,14 @@
                 </Rectangle>
                 <Image Name="img" Source="{Binding Path=ImagePath, Mode=TwoWay}" Width="150" Height="150" Stretch="UniformToFill" Visibility="Collapsed" Tap="Img_OnTap" >
                 </Image>
+            </Grid>
+                
+                
             </StackPanel>
+
         </Grid>
+        
+        
         <StackPanel Grid.Row="2">
             <ListBox Padding="10" ItemsSource="{Binding Path=Erori}">
                 <ListBox.ItemTemplate>
