--- a/HomeHelperPhone/Views/ViewConsumuri.xaml
+++ b/HomeHelperPhone/Views/ViewConsumuri.xaml
@@ -9,7 +9,7 @@
     xmlns:visualizationToolkit="clr-namespace:System.Windows.Controls.DataVisualization;assembly=System.Windows.Controls.DataVisualization.Toolkit" xmlns:Primitives="clr-namespace:System.Windows.Controls.DataVisualization.Charting.Primitives;assembly=System.Windows.Controls.DataVisualization.Toolkit"
     xmlns:homeHelperPhone="clr-namespace:HomeHelperPhone"
     x:Class="HomeHelperPhone.Views.ViewConsumuri"
-    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
+    SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
